Swipe flicker fixed in product screen

--- a/frontend/src/style/components/_modal.scss
+++ b/frontend/src/style/components/_modal.scss
@@ -28,7 +28,7 @@
     border-radius: 0;
   }
   .MuiPaper-root {
-    background-color: $background;
+    background-color: $grey-nuance-lighter;
   }
   .show {
     @include fade-in;
