--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -42,6 +42,7 @@ body,
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -ms-overflow-style: none;
+  overflow-y: scroll;
   scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
